logo.css
.logo__container {
  width: 100vw;
  background-color: rgba(52, 80, 80, 0.85);
  z-index: 100;
  /*! display: inline-block; */
  height: 79px;
  display: block;

}


.logo__content {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px 0px;
}

.logo__image {
  width: 32%;
  /*! object-fit: cover; */
  /*! aspect-ratio: 1 / 1; */
  /*! height: auto; */
  display: inline;
}

@media (min-width: 1200px) {
  #logo {
    --padding: 15px;
    padding: var(--padding) 0px;
  }

  .logo__image {
    width: 32%;
    /*! object-fit: cover; */
    /*! aspect-ratio: 1 / 1; */
    height: auto;
    display: inline;
  }

  .logo__container {}

}

@media (max-width: 1200px) {
  #logo {
    padding: 15px 0;
  }

  .logo__image {
    width: 32%;
    /*! object-fit: cover; */
    /*! aspect-ratio: 1 / 1; */
    /*! height: auto; */
    display: inline;
  }

  .logo__container {}

}

@media (max-width: 992px) {
  #logo {
    padding: 12.5px 0;
  }

  .logo__image {
    width: 32%;
    /*! object-fit: cover; */
    /*! aspect-ratio: 1 / 1; */
    /*! height: auto; */
    display: inline;
  }

  .logo__container {}

}

@media (max-width: 768px) {
  #logo {
    padding: 15px 0;
  }

  .logo__image {
    width: 32%;
    /*! object-fit: cover; */
    /*! aspect-ratio: 1 / 1; */
    /*! height: auto; */
    display: inline;
  }

  .logo__container {}

}

@media (max-width: 480px) {
  #logo {
    padding: 11.5px 0;
  }

  .logo__image {
    width: 71.8%;
    /*! object-fit: cover; */
    /*! aspect-ratio: 1 / 1; */
    /*! height: auto; */
    display: inline;
  }

  .logo__container {
    position: fixed;
    top: 0;
    left: 0;
  }

}

